--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center item-area">
-				<div id="time"></div>
+				<div class="time-remaining">Time Remaining <div id="time"></div></div>
 				<div id="results"></div>
 				<div id="question"></div>
 				<div class="answers">
